--- a/src/GCF/FrontBundle/Resources/views/Default/index.html.twig
+++ b/src/GCF/FrontBundle/Resources/views/Default/index.html.twig
@@ -3,6 +3,10 @@
 {% block body %}
 
     <style>
+        *{
+            -webkit-transition-duration: 0.5s;
+            transition-duration: 0.5s;
+        }
         .section_title {
             margin: 0 0 10px;
             padding-left: 10px;
