--- a/src/GCF/FrontBundle/Resources/views/base.html.twig
+++ b/src/GCF/FrontBundle/Resources/views/base.html.twig
@@ -193,7 +193,7 @@
         <style>
             .under_header_navigation{
 
-                background-image: url("http://127.0.0.1:8000/assets/images/BACKGROUND.jpg");
+                background-image: url("{{ asset('assets/images/BACKGROUND.jpg') }}");
                 position: relative;
                 width: 100%;
                 height: 200px;
@@ -215,6 +215,7 @@
                 width: 100%;
             }
         </style>
+
         <div class="under_header_navigation">
             <div class="container" style="">
                 <ol class="breadcrumb custom_breadcrumb">
@@ -224,6 +225,7 @@
                 </ol>
             </div>
         </div>
+
     {% endif %}
     {#<div class="banner" style="margin-top:-71px">#}
     {#<img src="http://placehold.it/2400x500" style="max-width:100%" height="500px" alt="">#}
@@ -406,8 +408,8 @@
 
 </div>
 
-<script src="{{ asset('assets/jquery/dist/jquery.js') }}"></script>
-<script src="{{ asset('assets/bootstrap/dist/js/bootstrap.min.js') }}"></script>
+<script src="{{ asset('assets/jquery/dist/jquery.js') }}" type="text/javascript" charset="utf-8"></script>
+<script src="{{ asset('assets/bootstrap/dist/js/bootstrap.min.js') }}" type="text/javascript" charset="utf-8"></script>
 <script src="{{ asset('assets/slick/slick.min.js') }}" type="text/javascript" charset="utf-8"></script>
 <script>
     // $('.slider_projects').slick({
